Add simple comments

--- a/.github/workflows/cache.yaml
+++ b/.github/workflows/cache.yaml
@@ -56,3 +56,6 @@ jobs:
           name: workerapp-artifact
       - name: output files
         run: ls -R
+
+
+        # Simple comment to test cache
