--- a/.github/workflows/cache.yaml
+++ b/.github/workflows/cache.yaml
@@ -48,14 +48,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Log
-        run: echo "Deploying Worker Application to Production"
-      - name: Download Artifacts
-        uses: actions/download-artifact@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup .NET Environment 
+        uses: actions/setup-dotnet@v4
         with:
-          name: workerapp-artifact
-      - name: output files
-        run: ls -R
+          dotnet-version: 8.0.x
+
+      - name: Restore Application dependencies
+        run: dotnet restore
+      - name: Log
+        run: echo "Testing how the cache works in github actions"
+      # - name: Download Artifacts
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: workerapp-artifact
+      # - name: output files
+      #   run: ls -R
 
 
         # Simple comment to test cache
