change worflow name to output

--- a/.github/workflows/cache.yaml
+++ b/.github/workflows/cache.yaml
@@ -77,3 +77,4 @@ jobs:
 
 
         # Simple comment to test cache in github actions
+        # Caching should not be used for Artifacts only used for dependencies which speed up the workflow
