--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,3 +31,8 @@ jobs:
           with:
             name: resuable-artifact
             path: ./resuable-artifact
+
+    deploy:
+        uses: ./.github/workflows/publish.yaml
+        with:
+            artifacts-name: resuable-artifact
