Update Release document

--- a/.github/release.yaml
+++ b/.github/release.yaml
@@ -6,6 +6,6 @@ changelog:
       include:
         authors:
           - '*'
-    - title: 🚀 Features
+    - title: 🚀 Releases
       labels:
-        - 'feature'
+        - 'release-scheduled'
