update release document

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -16,3 +16,6 @@ changelog:
     - title: 🔗 Jira Issues
       labels:
         - jira
+    - title: 🚧 In Progress
+      labels:
+        - in-progress
