update release document

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -19,3 +19,6 @@ changelog:
     - title: 🚧 In Progress
       labels:
         - in-progress
+    - title: 🚩 Security
+      labels:
+        - security
