update generate release action

--- a/.github/workflows/generate-release.yml
+++ b/.github/workflows/generate-release.yml
@@ -18,3 +18,5 @@ jobs:
           run: echo "${{ github.sha }}"
         - name: Trigger Date
           run: echo "${{ github.event.head_commit.timestamp }}"
+        - name: All
+          run: echo "${{ toJson(github) }}"
