--- a/.github/workflows/generate-release.yml
+++ b/.github/workflows/generate-release.yml
@@ -19,6 +19,5 @@ jobs:
         - name: Trigger Date
           run: echo "${{ github.event.head_commit.timestamp }}"
         - name: Email
-          run: echo "${{ toJson(github.event.commits) }}" | jq -r '.[].committer.email'
-        - name: All
-          run: echo "${{ toJson(github) }}"
+          run: |
+            echo "${{ toJson(github.event.commits) }}" | jq -r '.[].committer.email'
