--- a/.github/workflows/generate-release.yml
+++ b/.github/workflows/generate-release.yml
@@ -1,6 +1,9 @@
 name: Generate Release Notes
-
-on: push
+on:
+  push:
+    branches:
+      - '**'
+  workflow_dispatch:
 
 jobs:
     log-release-input:
