--- a/.github/workflows/generate-release.yml
+++ b/.github/workflows/generate-release.yml
@@ -26,6 +26,7 @@ jobs:
         - name: Email
           run: |
             echo '${{ toJson(github.event.commits) }}' | jq -r '.[].committer.email'
+            echo '${{ toJson(github.event.commits) }}' | jq -r '.[].committer.name'
 
 
 
